klusrc/deployments/pihole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    gateway-namespace-ref: pihole
  name: _
