klusrc/deployments/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
spec:
  parentRefs:
    - name: envoy
      namespace: gateways
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pihole
spec:
  parentRefs:
  - name: envoy
    namespace: gateways
    # name of the listener entry
    sectionName: pihole-tcp
  rules:
  - backendRefs:
    - name: pihole-dns-tcp
      port: 53
